A (touch) event that shows the playback controls can no longer activate click actions on the playback controls. Fixed Inter-Frame time calculation that was broken during a recent refactoring. Added a button to UI Settings that resets all settings to defaults. Fixed minor layout issue in UI Settings in several browsers. Text is now selectable in the About window, except in IE which is uncooperative. The About dialog now shows a list of unsupported optional features in browsers that do not support them (such as IE). Removed debugging console.log calls in PcmAudioPlayer. The admin login dialog now performs the originally requested action once login is complete. When saving a snapshot fails with a 403 response, the admin login dialog is presented. Added a note about requiring PTZ controls to be enabled when explaining how to enable group webcasting. Pausing H.264 playback before the first frame loads now allows the first frame to load. Background clip list updates should now be able to add new date tiles correctly.  I say "should" because this is really tough to test. Bulk deletion operations no longer stop at the first failure, and will try all operations before reporting an error count at the end.  Any successful deletions will result in the clip list being reloaded.

--- a/ui3/ui3.css
+++ b/ui3/ui3.css
@@ -57,12 +57,12 @@ body, #layouttop, #layoutleft, #layoutbody, #layoutbottom, .unselectable
 
 .selectable
 {
-	-webkit-touch-callout: initial;
-	-webkit-user-select: initial;
-	-khtml-user-select: initial;
-	-moz-user-select: initial;
-	-ms-user-select: initial;
-	user-select: initial;
+	-webkit-touch-callout: text;
+	-webkit-user-select: text;
+	-khtml-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
 	cursor: initial;
 }
 
@@ -1133,6 +1133,7 @@ div.icon, a.icon
 {
 	opacity: 0.333;
 }
+
 #volumeBar.audioTemporarilyUnavailable,
 #volumeBar.audioPermanentlyUnavailable
 {
@@ -1181,6 +1182,7 @@ div.icon, a.icon
 	height: 12px;
 	margin: 2px 0px;
 }
+
 #volumeBar.wide .progressBarOuter
 {
 	width: 70px;
@@ -2408,6 +2410,11 @@ div.icon, a.icon
 {
 	float: right;
 }
+
+#optionalFeaturesNotSupported
+{
+	display: none;
+}
 /* jpegSuppressionDialog */
 .jpegSuppressionDialog
 {
@@ -2919,7 +2926,6 @@ div.icon, a.icon
 {
 	box-sizing: border-box;
 	height: 28px;
-	line-height: 28px;
 	margin: 0px 10px;
 	float: right;
 }
